# DanceDatabase

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  DANCE_DATABASE.md  Makefile  README.md  bygdegardarna_to_dancedb.py  cli.py  config.example.py  config.py  config_sample.py  enrich_bygdegardarna_venues.py  fix_clashing_sv_labels.py  main.py  pyproject.toml  scrape_all.py  scrape_bygdegardarna.py  scrape_bygdegardarna_match.py  scrape_danslogen.py  scrape_danslogen_upload.py  scrape_onbeat.py  scrape_venues_from_dancedb.py  update_bygdegardarna_venues.py  upload_bands_to_dancedb.py  validate_all.py  validate_data.py  venues_to_quickstatements.py
data/: community_swing_2025.json  olandsveckan_2026.json  rdb_2026.json  valentine_swing_2026.json  westie_helg_2025_nov.json
deprecated/: bands_to_quickstatements.py  bygdegardarna_to_dancedb.py  config.py  config_sample.py  danslogen.py  enrich_bygdegardarna_venues.py  scrape_all.py  scrape_bygdegardarna.py  scrape_bygdegardarna_match.py  scrape_danslogen.py  scrape_danslogen_to_json.py  scrape_danslogen_upload.py  scrape_onbeat.py  scrape_venues_from_dancedb.py  upload_bands_to_dancedb.py  validate_all.py  validate_data.py  venues_to_quickstatements.py
disabled/: danslogen.py  onbeat.py
old_data/: community_swing_2025.json  olandsveckan_2026.json  rdb_2026.json  valentine_swing_2026.json  westie_helg_2025_nov.json
schema/: dancedb-event-1.0.0.yml
scripts/: dancedb_client.py  fix_clashing_sv_labels.py  wikidata_client.py
tests/: test_dancedb_client.py  test_danslogen.py  test_danslogen_band_mapper.py  (+9 more)
(+172 files in other folders)
