[tool.poetry]
name = "dance-database"
version = "0.1.0"
description = "Scraper, API and database for the social dancing community in Scandinavia."
authors = ["Nizo Priskorn"]
license = "GPLv3+"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.28.2"
pydantic = "^2"
scrapy = "^2.13.3"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^24.3.0"
codespell = "^2.2.2"
coverage = "^7.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pyupgrade = "^3.3.1"
types-python-dateutil = "^2.8.19.13"
types-requests = "^2.31.0.1"
ruff = "^0.0.278"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
